--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,3 +48,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 }
+
+apply plugin: 'com.google.ar.sceneform.plugin'
+
+sceneform.asset('sampledata/Heart.obj',
+        'default',
+        'sampledata/Heart.sfa',
+        'src/main/assets/Heart')
