--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.1"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "com.ac.myapplication"
-        minSdkVersion 24
-        targetSdkVersion 30
+        minSdkVersion 26
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
@@ -32,7 +32,6 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation project(':reloc-api')
     implementation "com.google.ar.sceneform.ux:sceneform-ux:1.17.1"
-    implementation 'com.google.ar:core:1.18.0'
 
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
@@ -54,4 +53,4 @@ apply plugin: 'com.google.ar.sceneform.plugin'
 sceneform.asset('sampledata/Heart.obj',
         'default',
         'sampledata/Heart.sfa',
-        'src/main/assets/Heart')
+        'src/main/assets/object')
