server coord. to scene coord.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ dependencies {
 
 apply plugin: 'com.google.ar.sceneform.plugin'
 
-sceneform.asset('sampledata/Heart.obj',
+sceneform.asset('sampledata/Star_01.obj',
         'default',
-        'sampledata/Heart.sfa',
+        'sampledata/Star_01.sfa',
         'src/main/assets/object')
