--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,11 +49,25 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+
+
+
+    implementation "io.arrow-kt:arrow-core:0.10.5"
+    implementation "io.arrow-kt:arrow-syntax:0.10.5"
+    kapt "io.arrow-kt:arrow-meta:0.10.5"
+
+    implementation "androidx.exifinterface:exifinterface:1.3.0"
+    implementation 'org.apache.commons:commons-imaging:1.0-alpha2'
+
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 }
+repositories {
+    mavenCentral()
+}
+
 
 apply plugin: 'com.google.ar.sceneform.plugin'
 
