--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,19 @@ repositories {
 
 apply plugin: 'com.google.ar.sceneform.plugin'
 
-//sceneform.asset('sampledata/Star_01.obj',
-//        'default',
-//        'sampledata/Star_01.sfa',
-//        'src/main/assets/object')
+sceneform.asset('sampledata/Star_01.obj',
+        'default',
+        'sampledata/Star_01.sfa',
+        'src/main/res/raw/star')
+
+
+sceneform.asset('sampledata/video.obj',
+        'sampledata/video_material.mat',
+        'sampledata/video.sfa',
+        'src/main/res/raw/video')
+
+
+sceneform.asset('sampledata/video_chr.obj',
+        'sampledata/video_material.mat',
+        'sampledata/video_chr.sfa',
+        'src/main/res/raw/video_chr')
